# TestMod

./: .gitignore  CMakeLists.txt  README.md  dllmain.cpp
Core/: Core.cpp  Core.hpp
Core/GameMessage/: GameMessages.h  network_enums.h
Core/NetworkManager/: NetworkManager.cpp  NetworkManager.h
Event/: Event.hpp
EventManager/: EventManager.cpp  EventManager.hpp
